plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.2'

    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation libs.guava
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = "25"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'it.unicam.cs.mpgc.rpg125667.App'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

tasks.named('test') {
    useJUnitPlatform()
}